--- a/css.css
+++ b/css.css
@@ -205,7 +205,7 @@ section #image_to_hide {
   top: 30px;
   width: 97vw;
   /* vw-  the 1/100 times of the viewport width */
-  background-image: url("https://images.unsplash.com/photo-1631624215749-b10b3dd7bca7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80");
+  background-image: url("https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   /* background-repeat: repeat-x; */
   /* background-repeat: repeat-y; */
   background-repeat: no-repeat;
