--- a/pages/learnings.css
+++ b/pages/learnings.css
@@ -60,6 +60,13 @@ root is the global variable here, Any custom properties written in the root vari
 
 /* ------------------------------------------------------------------------------ */
 /* IMPORTING A WEB FONT FROM GOOGLE - copy font's stylesheet link in the head tag of html and then USE teh font-family name wherever required*/
+code {
+  background-color: rgb(37, 26, 26);
+  border: 1px solid #999;
+  display: block;
+  padding: 20px;
+  border-radius: 50px;
+}
 
 :root {
   --light-color: brown;
@@ -273,6 +280,7 @@ li:nth-child(2) {
   background-color: #100f0f;
   opacity: 0.9;
 }
+
 /* GRID SECTION */
 
 .gridcontainer {
@@ -306,6 +314,7 @@ li:nth-child(2) {
   /* grid-column: 5 / span 4;
       grid-row: 2 / span 4; */
 }
+
 .griditem {
   background-color: var(--dark-color);
   border-radius: 20px;
@@ -473,6 +482,7 @@ select {
 
 /* now for the animation name mentioned above giving the actions */
 @keyframes dancing {
+
   /* 0% {
           top: 0px;
           left: 0px;
@@ -515,7 +525,7 @@ select {
 
 /* CSS SELECTORS */
 
-div > p {
+div>p {
   /* decendent selector */
 }
 
@@ -523,51 +533,61 @@ div p {
   /* child selector */
 }
 
-div + p {
+div+p {
   /* adjacent sibling selector */
 }
-div ~ p {
+
+div~p {
   /* general sibling selector */
 }
 
 /* pseudo classes */
-input:disabled{
+input:disabled {
   background-color: crimson;
 }
-input:required{
+
+input:required {
   background-color: violet;
 }
-input:placeholder-shown{
+
+input:placeholder-shown {
   background-color: rgb(47, 17, 23);
 }
-input:read-only{
+
+input:read-only {
   background-color: rgb(87, 61, 87);
 }
-input:invalid{
+
+input:invalid {
   background-color: rgb(255, 0, 0);
 }
-input:valid{
+
+input:valid {
   border: 4px solid green;
 }
-input:in-range{
+
+input:in-range {
   color: green;
 }
-input:out-of-range{
+
+input:out-of-range {
   color: rgb(128, 0, 0);
 }
 
 /* user action pseudo classes */
-li > button:hover{
+li>button:hover {
   background-color: cornflowerblue;
-  cursor:crosshair;
+  cursor: crosshair;
 }
-li > button:active{
+
+li>button:active {
   background-color: sienna;
-  cursor:crosshair;
+  cursor: crosshair;
 }
-li > button:focus{
-  background-color:#410914;
-  cursor:crosshair;
+
+li>button:focus {
+  background-color: #410914;
+  cursor: crosshair;
 }
 
 
