--- a/styling.css
+++ b/styling.css
@@ -25,29 +25,19 @@ body {
 
 /* commonly used media queries */
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-
-}
+@media only screen and (max-width: 600px) {}
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-
-}
+@media only screen and (min-width: 600px) {}
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-}
+@media only screen and (min-width: 768px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-}
+@media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
-}
+@media only screen and (min-width: 1200px) {}
 
 .subhead {
   font-weight: 600;
@@ -56,6 +46,7 @@ body {
   /* margin: auto; */
   /* font-size: 2em; */
 }
+
 .subhead h2 {
   font-weight: 600;
   font-size: 30px;
@@ -190,7 +181,8 @@ section .about {
 .imgIM {
   float: right;
   border-radius: 50%;
-  width: 450px; /* width of image (px or % or auto) */
+  width: 450px;
+  /* width of image (px or % or auto) */
   height: auto;
 }
 
@@ -251,6 +243,7 @@ section .about {
   text-decoration: none;
   color: var(--text-color);
 }
+
 .flexbox .item a:hover {
   text-decoration: underline;
 }
@@ -298,7 +291,25 @@ section .about {
 
 /* footer */
 
+footer .floating-footer {
+  font-size: small;
+  border: 1px solid #9f8e92;
+  border-top-left-radius: 34px;
+  background-color: #6d1022;
+  padding-left: 10px;
+  position: fixed;
+  bottom: -10px;
+  right: 0px;
+  opacity: 20%;
+}
+
 footer {
+  position: relative;
+  width: 100%;
+  /* background-color: #111827; */
+  color: white;
+  box-shadow: rgb(0 0 0 / 15%) 0px 0px 16px 9px;
+  padding: 15px 0px;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -314,14 +325,76 @@ footer a:hover {
   text-decoration: underline;
 }
 
-footer .floating-footer {
-  font-size: small;
-  border: 1px solid #9f8e92;
-  border-top-left-radius: 34px;
-  background-color: #6d1022;
-  padding-left: 10px;
-  position: fixed;
-  bottom: -10px;
-  right: 0px;
-  opacity: 20%;
+footer p {
+  margin: 0;
+}
+
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0.2rem 0;
+  gap: 0.3rem;
+}
+
+.icons ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.icons ul li {
+  list-style: none;
+}
+
+.icons ul li a {
+  display: block;
+  position: relative;
+  width: 25px;
+  height: 25px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 20px;
+  font-size: 15px;
+  margin: 0 0 0 20px;
+  border-radius: 50%;
+  overflow: hidden;
+  z-index: 1;
+  border: 3px solid #fff;
+}
+
+.icons ul li a .icon {
+  position: relative;
+  color: #262626;
+  transition: 0.5s;
+  z-index: 3;
+}
+
+.icons ul li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+.icons ul li a:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #55acee;
+  transition: 0.5s;
+  z-index: 2;
+}
+
+.icons ul li a:hover:before {
+  top: 0;
+}
+
+.icons ul li:nth-child(2) a:before {
+  background: black;
+}
+
+.icons ul li:nth-child(4) a:before {
+  background: rgb(197, 24, 111);
 }
