--- a/styling.css
+++ b/styling.css
@@ -18,6 +18,7 @@
 body {
   background-image: url("https://cloud-fww00tdhd-hack-club-bot.vercel.app/0compute-ea4c57a4.png");
 
+
   background-position: center;
   background-size: contain;
   color: white;
@@ -207,16 +208,92 @@ section #image_to_hide {
 /* ABOUT SECTION */
 
 section .about {
-  padding: 1px 60px 0px 60px;
+  /* padding: 1px 60px 0px 60px; */
+  width: 100%;
+  background: transparent;
+  padding-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+
 }
+
+section .about {
+  padding: 1px 60px 0px 60px;
+  width: 100%;
+  background: transparent;
+  padding-top: 50px;
+}
+
+.contentbox h1 {
+  font-size: 50px;
+  margin: auto;
+  padding: auto;
+  font-weight: 900;
+}
+
+.contentbox p {
+  font-size: 15px;
+  margin: auto;
+  padding: auto;
+  line-height: 30px;
+  font-weight: 100;
+  color: rgb(212, 212, 212);
+}
+
+.about_btn {
+  margin: 10px 0;
+}
+
+.about_self {
+  padding: 20px 0;
+}
+
+.about_hobby {
+  padding-bottom: 20px;
+}
+
+.about_img {
+  width: 60%;
+}
+
+
 
 .content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1196px;
+  margin: 0 auto;
+  /* background-color: #191919; */
+  border-radius: 10px;
+  padding: 20px 30px;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .contentbox h3 {
-  font-size: 20px;
+  font-size: 18px;
+  margin: auto;
+  padding: auto;
+  font-weight: 200;
 }
 
 .w50 {
@@ -235,8 +312,8 @@ section .about {
 
 .imgIM {
   float: right;
-  border-radius: 50%;
-  width: 450px;
+  /* border-radius: 50%; */
+  width: 100%;
   /* width of image (px or % or auto) */
   height: auto;
 }
