Adding pointer cursor and curves to borders #52

--- a/styling.css
+++ b/styling.css
@@ -250,6 +250,10 @@ section .about {
 
 .about_btn {
   margin: 10px 0;
+  border-radius: 25px;
+  cursor:pointer;
+  color: #9f8e92;
+  background-color: #d6e73c;
 }
 
 .about_self {
