--- a/styling.css
+++ b/styling.css
@@ -150,10 +150,9 @@ header nav li a {
 }
 
 header nav li a:hover {
-  color: white;
+  color: var(--light-color);
+  
   transition: color 0.3s ease;
-  text-transform: uppercase;
-  font-family: cursive;
 }
 
 header nav li a:active {
