--- a/styling.css
+++ b/styling.css
@@ -26,7 +26,7 @@ body {
 
 
 /* for smooth scrolling effect  */
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -145,7 +145,7 @@ header nav li a {
 
 header nav li a:hover {
   color: var(--light-color);
-  
+
   transition: color 0.3s ease;
 }
 
@@ -420,7 +420,79 @@ section .about {
 
 /* Projects section */
 .project h3 {
-  text-shadow: 6px -3px 2px rgb(72 32 32);
+  color: white;
+}
+
+.project {
+  background-color: #0c1222;
+}
+
+.grid-container {
+  display: grid;
+  width: 100%;
+  gap: 34px;
+  padding-bottom: 50px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-container>div {
+  background-color: #181A1B;
+  text-align: center;
+  margin: 0px;
+
+}
+
+.grid-item {
+  border: 1px solid black;
+  border-radius: 10px;
+  overflow: hidden;
+
+}
+
+.grid-item .image-wrapper>img {
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
+  object-position: center;
+}
+
+.grid-item>a {
+  width: 100%;
+  padding: 0;
+  text-decoration: none;
+}
+
+.grid-item a>.box {
+  text-align: center;
+  color: white;
+}
+
+.grid-item .image-wrapper {
+  height: 250px;
+  overflow: hidden;
+}
+
+.box {
+  height: fit-content;
+  font-size: 30px;
+}
+
+.box>.box-content {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: small;
+  font-style: oblique;
+}
+
+@media only screen and (max-width: 900px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 567px) {
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 /* WORK/Contribution SECTION */
@@ -507,101 +579,116 @@ section .about {
 
 /* Contact Us */
 .container {
-	max-width:400px;
-	width:100%;
-	margin:0 auto;
-	position:relative;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
 }
 
 /* #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; } */
 
 #contact {
-	background:#9d4343;
-	padding:25px;
-	margin:50px 0;
+  background: #9d4343;
+  padding: 25px;
+  margin: 50px 0;
 }
 
 #contact h3 {
-	color: #F96;
-	display: block;
-	font-size: 30px;
-	font-weight: 400;
+  color: #F96;
+  display: block;
+  font-size: 30px;
+  font-weight: 400;
   text-align: center;
   margin: 0px;
 }
 
 #contact h4 {
-	margin:5px 0 15px;
-	display:block;
-	font-size:15px;
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 15px;
   text-align: center;
 }
 
 fieldset {
-	border: medium none !important;
-	margin: 0 0 10px;
-	min-width: 100%;
-	padding: 0;
-	width: 100%;
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
 }
 
-#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
-	width:100%;
-	border:1px solid #CCC;
-	background:#FFF;
-	margin:0 0 5px;
-	padding:10px;
+#contact input[type="text"],
+#contact input[type="email"],
+#contact input[type="tel"],
+#contact input[type="url"],
+#contact textarea {
+  width: 100%;
+  border: 1px solid #CCC;
+  background: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
 }
 
-#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
-	-webkit-transition:border-color 0.3s ease-in-out;
-	-moz-transition:border-color 0.3s ease-in-out;
-	transition:border-color 0.3s ease-in-out;
-	border:1px solid #AAA;
+#contact input[type="text"]:hover,
+#contact input[type="email"]:hover,
+#contact input[type="tel"]:hover,
+#contact input[type="url"]:hover,
+#contact textarea:hover {
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+  border: 1px solid #AAA;
 }
 
 #contact textarea {
-	height:100px;
-	max-width:100%;
-  resize:none;
+  height: 100px;
+  max-width: 100%;
+  resize: none;
 }
 
 #contact button[type="submit"] {
-	cursor:pointer;
-	width:100%;
-	border:none;
-	background:#0CF;
-	color:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-	font-size:15px;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  background: #0CF;
+  color: #FFF;
+  margin: 0 0 5px;
+  padding: 10px;
+  font-size: 15px;
 }
 
 #contact button[type="submit"]:hover {
-	background:#09C;
-	-webkit-transition:background 0.3s ease-in-out;
-	-moz-transition:background 0.3s ease-in-out;
-	transition:background-color 0.3s ease-in-out;
+  background: #09C;
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 
-#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
-
-#contact input:focus, #contact textarea:focus {
-	outline:0;
-	border:1px solid #999;
+#contact button[type="submit"]:active {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
+
+#contact input:focus,
+#contact textarea:focus {
+  outline: 0;
+  border: 1px solid #999;
+}
+
 ::-webkit-input-placeholder {
- color:#888;
+  color: #888;
 }
+
 :-moz-placeholder {
- color:#888;
+  color: #888;
 }
+
 ::-moz-placeholder {
- color:#888;
+  color: #888;
 }
+
 :-ms-input-placeholder {
- color:#888;
-} 
+  color: #888;
+}
 
 /* footer */
 
@@ -730,8 +817,8 @@ footer p {
     line-height: 25px;
   }
 
-  section >section.about{
-    padding: 1px 3vw ;
+  section>section.about {
+    padding: 1px 3vw;
   }
 
   section .content {
